* Add timeshift support (Play/Pause only)